# OpenCV_demo

./: CMakeLists.txt  README.md
hsv_detector/: hsv_detector.cpp
rgb_detector/: red_rgb_detector.cpp  rgb_detector.cpp
